# django-scaleway-email

./: .gitignore  README.md  pyproject.toml
django_scaleway_email/: apps.py  backend.py
test_project/: settings.py  test_email_backend.py
