[tool.poetry]
name = "django-scaleway-email"
version = "0.1.1"
description = "Django email backend for Scaleway Transactional Email service"
authors = ["Julian Wachholz <julian@wachholz.ch>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = ">=2.0.0"

[tool.poetry.group.dev.dependencies]
django = [
    { version = "^4.2", python = ">=3.8.1,<3.10" },
    { version = "^5.0", python = ">=3.10" },
]
pytest = "^8.0.0"
pytest-django = "^4.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "test_project.settings"
minversion = "7.0"
addopts = "--no-migrations"
